# physiopy-community-guidelines

./: .all-contributorsrc  .autorc  .gitattributes  .pre-commit-config.yaml  .readthedocs.yml  .zenodo.json  CHANGELOG.md  MANIFEST.in  README.md  requirements.txt  setup.cfg  setup.py
.circleci/: config.yml
.github/: labeler.yml
docs/: Makefile  __init__.py
docs/source/: analyses_phys.md  best_practices.md  collect_phys.md  conf.py  index.rst  phys_set_up.md  physio_importance.md  physiopy_community.md  process_phys.md  references.md
docs/source/_static/css/: style.css
