[metadata]
name = physiopy_community_guidelines
url = https://github.com/physiopy/physiopy-community-guidelines
download_url = https://github.com/physiopy/physiopy-community-guidelines
author = Physiopy community
maintainer = Stefano Moia
maintainer_email = physiopy.community@gmail.com
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Science/Research
    License :: CC-BY-SA-4.0
license = CC-BY-SA-4.0
description = The community guidelines documentation.
long_description = file:README.md
long_description_content_type = text/markdown; charset=UTF-8
platforms = OS Independent
provides =
    physiopy_community_guidelines

[options]
python_requires = >=3.8
install_requires =
    furo
    memory-profiler
    myst-parser
    numpydoc
    sphinx>=2.0
    sphinx-argparse
    sphinxcontrib-apidoc
    sphinxcontrib-bibtex
    sphinx-copybutton
    sphinx-design
    sphinx-gallery
    sphinx-issues
    sphinx_rtd_theme
zip_safe = False
packages = find:
include_package_data = True

[options.extras_require]
devtools =
    pre-commit
dev =
    %(devtools)s

[versioneer]
VCS = git
style = pep440
versionfile_source = docs/_version.py
versionfile_build = docs/_version.py
tag_prefix =
parentdir_prefix =
